updated auto-fix script and added 32-bit start script updated.