@@ -33,16 +33,16 @@ fi
 # Limits Java JVM stack size and maximum heap usage.
 # Comment out for bigger systems, e.g. non-routers
 # or when API documentation is enabled
-#JVM_MEMORY_ARGS="-XX:MaxRAMPercentage=60 -XX:+UseG1GC -Xss512k -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./heapdump.hprof -Xlog:gc*:file=gc.log:time,uptime,level,tags"
-JVM_MEMORY_ARGS="
-  -Xms2600m \
-  -Xmx2600m \
-  -Xss1024k \
+JVM_MEMORY_ARGS="-Xss1256k -Xms1750m -Xmx1750m"
+#JVM_MEMORY_ARGS="
+  -Xms1750m \
+  -Xmx1750m \
+  -Xss1212k \
   -XX:+HeapDumpOnOutOfMemoryError \
   -XX:HeapDumpPath=./heapdump.hprof \
   -XX:+UseG1GC \
   -XX:MaxGCPauseMillis=300 \
-  -XX:InitiatingHeapOccupancyPercent=75 \
+  -XX:InitiatingHeapOccupancyPercent=50 \
   -XX:ParallelGCThreads=4 \
   -XX:ConcGCThreads=2 \
   -XX:G1HeapRegionSize=32m \
@@ -50,12 +50,11 @@ JVM_MEMORY_ARGS="
   -XX:+AlwaysPreTouch 
 "
 
-
 # Although java.net.preferIPv4Stack is supposed to be false
 # by default in Java 11, on some platforms (e.g. FreeBSD 12),
 # it is overridden to be true by default. Hence we explicitly
 # set it to false to obtain desired behaviour.
-nohup nice -n 10 java \
+nohup nice -n 15 java \
 	-Djava.net.preferIPv4Stack=false \
 	${JVM_MEMORY_ARGS} \
 	-jar qortal.jar \
